--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head>
     <title>Product List</title>
     <link rel="stylesheet" type="text/css" th:href="@{css/styles.css}">
 </head>
 <body>
-    <img th:src="@{/images/logo.png}" alt="Online Store Logo" class="logo">
-    <h1>Product List</h1>
+    <div th:replace="fragments/header :: header"></div> 
+    <a th:href="@{/}">Back</a>
+    <h3>Product List</h3>
     <table>
-        <tr><th>Code</th><th>Name</th><th>Price</th><th>Quantity</th><th>Image</th>
+        <tr>
+            <th>Code</th>
+            <th>Name</th>
+            <th>Price</th>
+            <th>Quantity</th>
+            <th>Image</th>
+            <th>Actions</th>
         </tr>
-        <tr th:each="product : ${products}">
-            <td th:text="${product.code}"></td>
-            <td th:text="${product.name}"></td>
-            <td th:text="|${product.price} $|"></td>
-            <td th:text="${product.quantity}"></td>
-            <td>
-                <!-- <img th:if="${product.image}" th:src="@{|/images/${product.image}|}" width="50px" height="50px">
-                <img th:unless="${product.image}" th:src="@{/images/no-image.png}" width="50px" height="50px"> -->
-                <img th:src="(${product.image})?@{|/images/${product.image}|}:@{/images/no-image.png}" alt="photo"
-                    width="50" height="50">
-            </td>
-        </tr>
+        <th-block th:each="product,state : ${products}">
+            <tr th:style="${state.odd}?'background-color:#D5B69A':'background-color:#9AB7D5'">
+                <td th:text="${product.code}"></td>
+                <td th:text="${product.name}"></td>
+                <td th:text="|${product.price} $|"></td>
+                <td th:text="${product.quantity}"></td>
+                <td>
+                    <img th:if="${product.image}" th:src="@{|/images/${product.image}|}" width="50px" height="50px">
+                    <img th:unless="${product.image}" th:src="@{/images/no-image.png}" width="50px" height="50px">
+                </td>
+                <td>
+                    <!-- <a th:href="@{|/products/${product.id}/edit|}">Edit</a> -->
+                    <form th:action="@{|/products/${product.id}/edit|}" method="get" class="edit-form">
+                        <button type="submit">Edit</button>
+                    </form>
+                    <form th:action="@{|/products/${product.id}/delete|}" method="post" class="delete-form">
+                        <button type="submit">Delete</button>
+                    </form>
+                </td>
+            </tr>
+        </th-block>
+        
     </table>
-    <br>
-    <div>
-        <a th:href="@{/products/create}">Add product</a>
-    </div>
+    <a th:href="@{/products/create}" class="add-button">Add Product</a>
 </body>
-
 </html>
